Add message parameter to other page and update index.ejs with navigation link

--- a/index.ejs
+++ b/index.ejs
@@ -8,5 +8,6 @@
     <h1><%= title %></h1>
     <p><%= content %></p>
     <p><%= message %></p>
+    <p><a href="/other">Other Pageに移動</a></p>
 </body>
 </html>
