--- a/index.ejs
+++ b/index.ejs
@@ -8,6 +8,10 @@
     <h1><%= title %></h1>
     <p><%= content %></p>
     <p><%= message %></p>
+    <form method="POST" action="/other">
+        <input type="text" name="msg" value="こんにちは">
+        <input type="submit" value="送信">
+    </form>
     <p><a href="/other">Other Pageに移動</a></p>
 </body>
 </html>
