--- a/app/appMessageBoard/cookieari/index.ejs
+++ b/app/appMessageBoard/cookieari/index.ejs
@@ -20,6 +20,7 @@
         <td><%=data.msg %></td>
       </tr>
     </table>
+    <p>your last message:<%= cookie_data %></p>
     <form method="post" action="/">
       <div class="form-group">
         <label for="msg">MESSAGE</label>
@@ -28,7 +29,6 @@
       </div>
       <input type="submit" value="送信" 
         class="btn btn-primary">
-    </form>
   </div>
 </body>
 </html>
