--- a/app/appMessageBoardonLogin/index.ejs
+++ b/app/appMessageBoardonLogin/index.ejs
@@ -8,6 +8,7 @@
   <link rel="stylesheet" 
   href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
   crossorigin="anonymous">
+  <link rel="stylesheet" href="./style.css">
   <script>
     function init() {
       var id = localStorage.getItem('id');
