--- a/omikuziApp/public/stylesheets/style.css
+++ b/omikuziApp/public/stylesheets/style.css
@@ -19,17 +19,13 @@ h1 {
   color: #d32f2f;
 }
 
-.fortune-box {
-  margin: 30px 0;
-  padding: 20px;
-  border: 2px solid #d32f2f;
-  border-radius: 5px;
-}
+
 
 .fortune {
-  font-size: 48px;
+  font-size: 3em;
   color: #d32f2f;
-  margin: 10px 0;
+  font-weight: bold;
+  margin: 20px 0;
 }
 
 .btn {
