--- a/omikuziApp/views/index.ejs
+++ b/omikuziApp/views/index.ejs
@@ -3,6 +3,11 @@
 
 <head>
     <title>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>
         <%= title %>
     </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
@@ -10,16 +15,10 @@
 
 <body>
     <div class="container">
-        <h1>
-            <%= title %>
-        </h1>
-        <div class="fortune-box">
-            <p>今日の運勢は...</p>
-            <h2 class="fortune">
-                <%= fortune %>
-            </h2>
-            <p>です！</p>
-        </div>
+        <h1><%= title %></h1>
+        <p>今日の運勢は...</p>
+        <div class="fortune"><%= fortune %></div>
+        <p>です！</p>
         <a href="/" class="btn">もう一度引く</a>
     </div>
 </body>
